// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminControlActionsButtons Admin has freeze manager role should render correctly: minterRole 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-u2mmsi"
  >
    <a
      class="chakra-button css-vueqt9"
      data-testid="freeze-button"
      href="/"
    >
      Freeze / Unfreeze
    </a>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`AdminControlActionsButtons should render correctly: defaultAdminRole 1`] = `
<DocumentFragment>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
